cmake_minimum_required(VERSION 3.11.2)
project(ALGORITHMS VERSION 0.0.1)
message(STATUS "Compiling...")

add_executable(linked_list data_structures/linked_list.cpp)
add_executable(priority_queue data_structures/priority_queue.cpp)
# add_executable(hash_table data_structures/hash_table.cpp)
add_executable(queue data_structures/queue.cpp)
add_executable(stack data_structures/stack.cpp)
add_executable(bst data_structures/binary_search_tree.cpp)
