project(data_structures)

# add_executable(${PROJECT_NAME})

# add_library(${PROJECT_NAME} binary_search_tree.cpp)
add_executable(linked_list linked_list.cpp)
add_executable(priority_queue priority_queue.cpp)
# add_executable(hash_table hash_table.cpp)
add_executable(queue queue.cpp)
add_executable(stack stack.cpp)
add_executable(bst binary_search_tree.cpp)

# target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
