project(apps)

# add_executable(${PROJECT_NAME})

# add_library(${PROJECT_NAME} binary_search_tree.cpp)
add_executable(factorial factorial.cpp)
add_executable(fibonnaci fib.cpp)
add_executable(min_path_sum min_path_sum.cpp)
add_executable(staircases staircases.cpp)

# target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
